--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -18,6 +18,11 @@
 @import 'blocks/header';
 @import 'blocks/promo';
 @import 'blocks/reasons';
+@import 'blocks/title-blocks';
+@import 'blocks/titles';
+@import 'blocks/mobile';
+
+
 
 
 
