--- a/src/sass/blocks/_header.scss
+++ b/src/sass/blocks/_header.scss
@@ -6,6 +6,7 @@ header {
         padding: 10px;
         height: 53px;
         background: #212121;
+        z-index:1;
         .menu {
             display: flex;
             justify-content: space-between;
