--- a/src/sass/blocks/_mobile.scss
+++ b/src/sass/blocks/_mobile.scss
@@ -1,5 +1,7 @@
 .mobile {
-    min-height: 925px;
+    min-height: 864px;
+    background: url('../../img/mobile/mobile_bg.jpg') center center/cover no-repeat;
+    padding: 48px 0 80px 0;
     &__subtitle {
         font-style: normal;
         font-weight: 400;
