--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -11,6 +11,7 @@
 }
 
 .container {
+    position: relative;
     max-width: 1140px;
     margin: 0 auto;
 }
@@ -21,6 +22,7 @@
 @import 'blocks/title-blocks';
 @import 'blocks/titles';
 @import 'blocks/mobile';
+@import 'blocks/choice';
 
 
 
