step_5_conditions_and_world_completed, footer_completed_all_but_not_icon_fonts

--- a/src/sass/blocks/_titles.scss
+++ b/src/sass/blocks/_titles.scss
@@ -7,7 +7,11 @@
     text-align: center;
     text-transform: uppercase;
     color: #222222;
-    &__choice {
+    &__choice, &__world {
         color: white;
+    }
+    &__conditions {
+        margin-top: 27px;
+        margin-bottom: 0;
     }
 }
