--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -23,8 +23,9 @@
 @import 'blocks/titles';
 @import 'blocks/mobile';
 @import 'blocks/choice';
-
-
+@import 'blocks/conditions';
+@import 'blocks/world';
+@import 'blocks/footer';
 
 
 
