--- a/src/sass/base/_fonts.scss
+++ b/src/sass/base/_fonts.scss
@@ -52,3 +52,15 @@
     font-weight: 100;
     font-style: normal;
 }
+
+@font-face {
+    font-family: 'icomoon';
+    src:  url('../../fonts/icomoon.eot?f7rvxm');
+    src:  url('../../fonts/icomoon.eot?f7rvxm#iefix') format('embedded-opentype'),
+      url('../../fonts/icomoon.ttf?f7rvxm') format('truetype'),
+      url('../../fonts/icomoon.woff?f7rvxm') format('woff'),
+      url('../../fonts/icomoon.svg?f7rvxm#icomoon') format('svg');
+    font-weight: normal;
+    font-style: normal;
+    font-display: block;
+  }
