--- a/src/sass/blocks/_title-blocks.scss
+++ b/src/sass/blocks/_title-blocks.scss
@@ -10,4 +10,8 @@
     text-align: center;
     text-transform: uppercase;
     color: #FFFFFF;
+    &-choice, &-white {
+        background:#FFFFFF;
+        color: #000000;
+    }
 }
