--- a/src/sass/blocks/_reasons.scss
+++ b/src/sass/blocks/_reasons.scss
@@ -23,7 +23,7 @@
         align-items: center;
         width: 116px;
         height: 116px;
-        background: #1EACC7;
+        background: $main-color;
         border-radius: 100%;
     }
     &__text {
