--- a/src/sass/base/_fonts.scss
+++ b/src/sass/base/_fonts.scss
@@ -64,3 +64,46 @@
     font-style: normal;
     font-display: block;
   }
+
+  @font-face {
+    font-family: 'icomoon';
+    src:  url('../../fonts/icomoon.eot?ui2w0b');
+    src:  url('../../fonts/icomoon.eot?ui2w0b#iefix') format('embedded-opentype'),
+      url('../../fonts/icomoon.ttf?ui2w0b') format('truetype'),
+      url('../../fonts/icomoon.woff?ui2w0b') format('woff'),
+      url('../../fonts/icomoon.svg?ui2w0b#icomoon') format('svg');
+    font-weight: normal;
+    font-style: normal;
+    font-display: block;
+  }
+  
+  [class^="icon-"], [class*=" icon-"] {
+    /* use !important to prevent issues with browser extensions that change fonts */
+    font-family: 'icomoon' !important;
+    font-style: normal;
+    font-weight: normal;
+    font-variant: normal;
+    text-transform: none;
+    line-height: 1;
+  
+    /* Better Font Rendering =========== */
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+  }
+  
+  .icon-linkedin:before {
+    content: "\e900";
+    color: white;
+  }
+  .icon-twitter:before {
+    content: "\e901";
+    color: white;
+  }
+  .icon-facebook:before {
+    content: "\ea90";
+    color: white;
+  }
+  .icon-instagram:before {
+    content: "\ea92";
+    color: white;
+  }
