--- a/src/sass/blocks/_promo.scss
+++ b/src/sass/blocks/_promo.scss
@@ -39,7 +39,7 @@
         margin-top: 116px;
         width: 259px;
         height: 63px;
-        background: linear-gradient(0deg, #1EACC7 0%, #4CE2FF 100%);
+        background: linear-gradient(0deg, $main-color 0%, #4CE2FF 100%);
         box-shadow: inset 0px -4px 0px rgba(0, 0, 0, 0.12);
         border-radius: 4px;
         border: none;
@@ -50,6 +50,7 @@
         text-transform: uppercase;
         color: #FFFFFF;
         text-shadow: 1px 1px 0px rgba(0, 0, 0, 0.21);
+        @include btn_hover;
     }
 
 }
